--- a/tutorial/introducao_ao_jupyter_notebook.ipynb
+++ b/tutorial/introducao_ao_jupyter_notebook.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Pesquisar mais sobre o conceito de notebook e o zeppelin apache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **O que é um Jupyter Notebook?**\n",
     "\n",
     "\n",
