--- a/tutorial/numpy.ipynb
+++ b/tutorial/numpy.ipynb
@@ -774,6 +774,33 @@
     "a = np.array([0.5, 3, 1], float)\n",
     "np.where(a > 1, 1/a, a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#numpy + pandas\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "data = pd.read_csv(\"data.csv\")\n",
+    "#data.head()\n",
+    "\n",
+    "# TODO: Separate the features and the labels into arrays called X and y\n",
+    "\n",
+    "X = np.array(data[['x1', 'x2']])\n",
+    "y = np.array(data['y'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
